--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://1nfern0o.github.io/Money-project",
+  "homepage": "http://1nfern0o.github.io/money-track",
   "name": "cursor-project",
   "version": "0.1.0",
   "private": true,
