--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "http://1nfern0o.github.io/money-track",
-  "name": "cursor-project",
+  "name": "money-track",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
